--- a/src/app/components/vista-ordenes/ver-orden/ver-orden.component.html
+++ b/src/app/components/vista-ordenes/ver-orden/ver-orden.component.html
@@ -246,6 +246,6 @@
   <button *ngIf="!firmada && isIP" class="btn btn-rounded btn btn-success mr-3 ml-3" types="button" (click)="aceptarOrden()">Aceptar Orden</button>
   <button *ngIf="!firmada && isIP" class="btn btn-rounded btn btn-danger m-0" types="button" (click)="rechazarOrden()">Rechazar Orden</button>
  <!-- <button class="btn btn-rounded btn btn-success m-0" types="button" (click)="pedirModificacionOrden()">Modificar Orden</button>-->
-  
+  <button (click)="generarPDF()"> GENERAR PDF</button>  
 
 </div>
