--- a/src/app/components/vista-ordenes/vista-ordenes.component.html
+++ b/src/app/components/vista-ordenes/vista-ordenes.component.html
@@ -48,16 +48,12 @@
             <td>{{ordenes[getOrdenPagindoIndex(a,   paginaActual)].estado}}</td>
             <td>{{ordenes[getOrdenPagindoIndex(a,   paginaActual)].concepto}}</td>
             <td>{{ordenes[getOrdenPagindoIndex(a,   paginaActual)].acronimo}}</td>
-          <td>
-            <button type="button" class="btn btn-link" name="button" [routerLink]="['/vistaOrdenes/verOrden/', ordenes[getOrdenPagindoIndex(a,   paginaActual)].id]" >
-              <img src="assets/iconos/editar.png" class="rounded" alt="Editar Orden">
-            </button>
-          </td>
-          <td>
-            <button type="button" class="btn btn-link" name="button" (click)="borrarOrden(orden)" >
-              <img src="assets/iconos/papelera.png" class="rounded" alt="Eliminar Orden">
-            </button>
-          </td>
+            <td>
+              <img src="assets/iconos/editar.png" class="rounded" alt="Editar Orden" [routerLink]="['/vistaOrdenes/verOrden/', ordenes[getOrdenPagindoIndex(a,   paginaActual)].id]" >
+            </td>
+            <td>
+                <img src="assets/iconos/papelera.png" class="rounded" alt="Eliminar Orden" (click)="borrarOrden(ordenes[getOrdenPagindoIndex(a,   paginaActual)])">
+            </td>
         </tr>
         <tr><!--Los botones llaman a las funciones anterior y siguiente y actualizan a la pagina correspondiente-->
           <button type="button" class="btn btn-link mr-2" (click) ="paginaActual= anterior(paginaActual, ordenes.length, 0)">
