--- a/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.css
+++ b/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.css
@@ -1,5 +1,12 @@
 .icon{
     width: 60%;
     min-width: 16px;
-    max-width: 32px;
+    max-width: 20px; 
 }
+
+
+.table td, .table th {
+    padding: .5rem;
+    vertical-align: top;
+    border-top: 1px solid #dee2e6;
+  }
