--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -114,7 +114,7 @@
               <td>{{pendientes[getOrdenPagindoIndex(a,   paginaActualP)].concepto}}</td>
               <td>{{pendientes[getOrdenPagindoIndex(a,   paginaActualP)].acronimo}}</td>
               <td>
-                  <img src="assets/iconos/lupa.png" class="rounded ml-0 icon" alt="Editar Orden" maxwidth="10px" [routerLink]="['/vistaOrdenes/verOrden/', listaIP[getOrdenPagindoIndex(i, paginaActualIP)].id]">
+                  <img src="assets/iconos/lupa.png" class="rounded ml-0 icon" alt="Editar Orden" maxwidth="10px" [routerLink]="['/vistaOrdenes/verOrden/', pendientes[getOrdenPagindoIndex(i, paginaActualP)].id]">
               </td>
           </tr>
           <tr><!--Los botones llaman a las funciones anterior y siguiente y actualizan a la pagina correspondiente-->
@@ -147,7 +147,7 @@
               <td>{{pendientesM[getOrdenPagindoIndex(a,   paginaActualPM)].concepto}}</td>
               <td>{{pendientesM[getOrdenPagindoIndex(a,   paginaActualPM)].acronimo}}</td>
               <td>
-                  <img src="assets/iconos/lupa.png" class="rounded ml-0 icon" alt="Editar Orden" maxwidth="10px" [routerLink]="['/vistaOrdenes/verOrden/', listaIP[getOrdenPagindoIndex(i, paginaActualIP)].id]">
+                  <img src="assets/iconos/lupa.png" class="rounded ml-0 icon" alt="Editar Orden" maxwidth="10px" [routerLink]="['/vistaOrdenes/verOrden/', pendientesM[getOrdenPagindoIndex(i, paginaActualM)].id]">
               </td>
           </tr>
           <tr><!--Los botones llaman a las funciones anterior y siguiente y actualizan a la pagina correspondiente-->
