--- a/src/app/components/vistaProyectos/proyectos.component.html
+++ b/src/app/components/vistaProyectos/proyectos.component.html
@@ -25,7 +25,7 @@
           <th>Acrónimo</th>
           <th>Presupuesto</th>
           <th>Nºcontabilidad</th>
-          <th>Editar</th>
+          <th>Editar/Ver</th>
           <th>Borrar</th>
         </tr>
       </thead>
